draft language selector in java application

--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -7,7 +7,9 @@ pleaseSelect = Please Select
 notApplicable = unknown
 
 languagePanelLabel = Language:
-
+// BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
+languageSelection = Please Select, BG - Български, CA - Catalan, DE - Deutsch, EL - Ελληνικά, EN - English, ES - Español, FA - فارسی, FR - Français, HE - עברית , HR - Hrvatski, IT - Italiano, NL - Nederlands,  PT - Português, RU - Русский, SQ - Shqip, TR - Türkçe, UK - Українська 
+// comment  
 genderPanelLabel = Gender:
 genderSelection = new String [3];
 genderSelection[0] = pleaseSelect;   
