--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -8,7 +8,7 @@ notApplicable = unknown
 
 languagePanelLabel = Language:
 // BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
-languageSelection = Please Select, BG - Български, CA - Catalan, DE - Deutsch, EL - Ελληνικά, EN - English, ES - Español, FA - فارسی, FR - Français, HE - עברית , HR - Hrvatski, IT - Italiano, NL - Nederlands,  PT - Português, RU - Русский, SQ - Shqip, TR - Türkçe, UK - Українська 
+languageSelection = EN - English, BG - Български, CA - Catalan, DE - Deutsch, EL - Ελληνικά,  ES - Español, FA - فارسی, FR - Français, HE - עברית , HR - Hrvatski, IT - Italiano, NL - Nederlands,  PT - Português, RU - Русский, SQ - Shqip, TR - Türkçe, UK - Українська 
 // comment  
 genderPanelLabel = Gender:
 genderSelection = new String [3];
