snapshot - draft use of MessagesBundle for label localization

--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -7,47 +7,21 @@ pleaseSelect = Please Select
 notApplicable = unknown
 
 languagePanelLabel = Language:
+// comma separated list
 // BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
 languageSelection = EN - English, BG - Български, CA - Catalan, DE - Deutsch, EL - Ελληνικά,  ES - Español, FA - فارسی, FR - Français, HE - עברית , HR - Hrvatski, IT - Italiano, NL - Nederlands,  PT - Português, RU - Русский, SQ - Shqip, TR - Türkçe, UK - Українська 
 // comment  
 genderPanelLabel = Gender:
-genderSelection = new String [3];
-genderSelection[0] = pleaseSelect;   
-genderSelection[1] = Male    
-genderSelection[2] = Female 
+genderSelection = Please Select, Male, Female
 
 ageRangePanelLabel = Age Range:
-ageSelection = new String [4];
-ageSelection[0] = pleaseSelect;  
-ageSelection[1] = Youth  
-ageSelection[2] = Adult 
-ageSelection[3] = Senior 
+ageSelection = Please Select, Youth, Adult, Senior
 
 dialectPanelLabel = Pronunciation Dialect:
-dialectSelection = new String [11];
-dialectSelection[0] = pleaseSelect;    
-dialectSelection[1] = Australian English    
-dialectSelection[2] = American English    // other
-dialectSelection[3] = British English 
-dialectSelection[4] = Canadian English      
-dialectSelection[5] = European English 
-dialectSelection[6] = Indian English
-dialectSelection[7] = Irish English 
-dialectSelection[8] = New Zealand English 
-dialectSelection[9] = South African English  
-dialectSelection[10] = Other
+dialectSelection = Please Select, Australian English, American English , British English, Canadian English, European English, Indian English, Irish English, New Zealand English, South African English, Other
 
 microphonePanelLabel = Microphone Type:
-microphoneSelection = new String [9];
-microphoneSelection[0] = pleaseSelect;  
-microphoneSelection[1] = Headset mic    
-microphoneSelection[2] = USB Headset mic   
-microphoneSelection[3] = Desktop Boom mic  
-microphoneSelection[4] = USB Desktop Boom mic  
-microphoneSelection[5] = Laptop Built-in mic 
-microphoneSelection[6] = WebCam mic      
-microphoneSelection[7] = Studio mic 
-microphoneSelection[8] = Other 
+microphoneSelection = Please Select, Headset mic, USB Headset mic, Desktop Boom mic, USB Desktop Boom mic, Laptop Built-in mic, WebCam mic, Studio mic, Other
 
 uploadText = <html>By clicking the \"Upload\" button, you agree to assign the Copyright to your recorded speech to <br> the Free Software Foundation, and to license your submission under the GNU Public Licence (\"GPL\"):
 uploadButtonLabel = Upload To VoxForge
