--- a/src/speechrecorder/languages/MessagesBundle_ru_RU.properties
+++ b/src/speechrecorder/languages/MessagesBundle_ru_RU.properties
@@ -7,10 +7,7 @@ pleaseSelect = Выберите
 notApplicable = другое
 
 genderPanelLabel = Пол:
-genderSelection = new String [3]
-genderSelection[0] = pleaseSelect   
-genderSelection[1] = Мужчина    
-genderSelection[2] = Женщина 
+genderSelection = Выберите, Мужчина, Женщина
 
 ageRangePanelLabel = Возраст:
 ageSelection = new String [4]
