EN and RU now using MessageBundles

--- a/src/speechrecorder/languages/MessagesBundle_ru_RU.properties
+++ b/src/speechrecorder/languages/MessagesBundle_ru_RU.properties
@@ -7,36 +7,36 @@ pleaseSelect = Выберите
 notApplicable = другое
 
 genderPanelLabel = Пол:
-genderSelection = Выберите, Мужчина, Женщина
+genderSelection = Выберите, \
+Мужчина, \
+Женщина
 
 ageRangePanelLabel = Возраст:
-ageSelection = new String [4]
-ageSelection[0] = pleaseSelect  
-ageSelection[1] = до 25  
-ageSelection[2] = до 55 
-ageSelection[3] = более 55 
+ageSelection = Выберите, \
+до 25, \
+до 55, \
+более 55
 
 dialectPanelLabel = Регион
-dialectSelection = new String [8]
-dialectSelection[0] = pleaseSelect    
-dialectSelection[1] = Центральный    
-dialectSelection[2] = Южный    // other
-dialectSelection[3] = Северный 
-dialectSelection[4] = Урал      
-dialectSelection[5] = Сибирь 
-dialectSelection[6] = Дальний восток 
-dialectSelection[7] = Другое
+dialectSelection = Выберите, \
+Центральный, \
+Южный, \
+Северный, \
+Урал, \
+Сибирь, \
+Дальний \
+восток, \
+Другое
 
 microphonePanelLabel = Тип микрофона:
-microphoneSelection = new String [8]
-microphoneSelection[0] = pleaseSelect  
-microphoneSelection[1] = В гарнитуре    
-microphoneSelection[2] = USB   
-microphoneSelection[3] = Компьютерный  
-microphoneSelection[4] = Встроенный в ноутбук 
-microphoneSelection[5] = Веб-камера      
-microphoneSelection[6] = Студийный микрофон 
-microphoneSelection[7] = Другое 
+microphoneSelection = Выберите, \
+В гарнитуре, \
+USB, \
+Компьютерный, \
+Встроенный в ноутбук, \
+Веб-камера, \
+Студийный микрофон, 
+Другое
 
 uploadText = <html>Нажимая на кнопку \"Загрузить\", Вы передаёте права на записанную информацию <br> Ассоциации Свободного Программного Обеспечения, и позволяете распространять её в терминах лицензии GNU GPL: 
 uploadButtonLabel = Загрузить
@@ -44,21 +44,17 @@ uploadButtonLabel = Загрузить
 moreInfoText = Для получения дополнительной информации о правах на запись, прочитайте эту страницу:
 moreInfoButtonLabel = Дополнительная информация    
 
-disclaimerText = 
-"<html>Апплет загрузки речи VoxForge - Авторское право (C) 2007-2016 VoxForge<br>"
-+"Это приложение поставляется БЕЗ ГАРАНТИЙ оно может даже не соответствовать<br> 
-+"предъявляемым к нему требованиям. Для получения дополнительной информации<br>"
-+"нажмите \"О программе\":
-aboutButtonLabel = О программе
-
 recordButton = Записать 
 stopButton = Пауза 
 playButton = Воспроизвести 
 
 peakWarningLabel =  ПРЕДУПРЕЖДЕНИЕ: запись слишком громкая 
 sampleGraphFileLabel = Файл: 
-sampleGraphLengthLabel =   Длина: 
-sampleGraphPositionLabel ="  Положение: 
+sampleGraphLengthLabel = Длина: 
+sampleGraphPositionLabel = Положение: 
 
 uploadingMessageLabel = Загрузка записи...
 uploadCompletedMessageLabel = Запись загружена...Спасибо за участие!
+
+// direction of text
+leftToRight = true
