--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -9,19 +9,58 @@ notApplicable = unknown
 languagePanelLabel = Language:
 // comma separated list
 // BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
-languageSelection = EN - English, BG - Български, CA - Catalan, DE - Deutsch, EL - Ελληνικά,  ES - Español, FA - فارسی, FR - Français, HE - עברית , HR - Hrvatski, IT - Italiano, NL - Nederlands,  PT - Português, RU - Русский, SQ - Shqip, TR - Türkçe, UK - Українська 
-// comment  
+languageSelection = EN - English, \
+BG - Български, \
+CA - Catalan, \
+DE - Deutsch, \
+EL - Ελληνικά,  \
+ES - Español, \
+FA - فارسی, \
+FR - Français, \
+HE - עברית , \
+HR - Hrvatski, \
+IT - Italiano, \
+NL - Nederlands,  \
+PT - Português, \
+RU - Русский, \
+SQ - Shqip, \
+TR - Türkçe, \
+UK - Українська
+ 
 genderPanelLabel = Gender:
-genderSelection = Please Select, Male, Female
+genderSelection = Please Select, \
+Male, \
+Female
 
 ageRangePanelLabel = Age Range:
-ageSelection = Please Select, Youth, Adult, Senior
+ageSelection = Please Select, \
+Youth, \
+Adult, \
+Senior
 
 dialectPanelLabel = Pronunciation Dialect:
-dialectSelection = Please Select, Australian English, American English , British English, Canadian English, European English, Indian English, Irish English, New Zealand English, South African English, Other
+dialectSelection = Please Select, \
+Australian English, \
+American English, \
+British English, \
+Canadian English, \
+European English, \
+Indian English, \
+Irish English, \
+New Zealand English, \
+South African English, \
+Other
 
 microphonePanelLabel = Microphone Type:
-microphoneSelection = Please Select, Headset mic, USB Headset mic, Desktop Boom mic, USB Desktop Boom mic, Laptop Built-in mic, WebCam mic, Studio mic, Other
+microphoneSelection = Please Select, \
+Headset mic, \
+USB Headset mic, \
+Desktop Boom mic, \
+USB Desktop Boom mic, \
+Laptop Built-in mic, \
+WebCam mic, \
+Studio mic, \
+Other
 
 uploadText = <html>By clicking the \"Upload\" button, you agree to assign the Copyright to your recorded speech to <br> the Free Software Foundation, and to license your submission under the GNU Public Licence (\"GPL\"):
 uploadButtonLabel = Upload To VoxForge
@@ -29,12 +68,6 @@ uploadButtonLabel = Upload To VoxForge
 moreInfoText = For more information on Copyright and GPL, click here:
 moreInfoButtonLabel = More Information    
 
-disclaimerText = 
-"<html>VoxForge SpeechSubmission Applet - Copyright (C) 2007-2016 VoxForge<br>"
-//"<html><center>VoxForge SpeechSubmission Applet<br>"
-+"This program comes with ABSOLUTELY NO WARRANTY; without even the implied<br> "
-+"warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  For<br>" 
-+"details click the \"About\" button:
 aboutButtonLabel = About
 
 recordButton = Record 
@@ -43,9 +76,12 @@ playButton = Play
 
 peakWarningLabel =  Error: input too loud, please adjust microphone volume and re-record prompt 
 sampleGraphFileLabel = File: 
-sampleGraphLengthLabel =   Length: 
-sampleGraphPositionLabel =  Position: 
+sampleGraphLengthLabel =  Length: 
+sampleGraphPositionLabel = Position: 
 
 uploadingMessageLabel = Uploading...
 savingMessageLabel = Uploading...
 uploadCompletedMessageLabel = Upload completed... Thank you for your submission!
+
+// direction of text
+leftToRight = true
