snapshot  adding more languages; minor fixes

--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -7,8 +7,9 @@ pleaseSelect = Please Select
 notApplicable = unknown
 
 languagePanelLabel = Language:
-// comma separated list
-// BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
+# comma separated list; backslah and return character is line continuation 
+# for Java properties file
+# BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
 languageSelection = EN - English, \
 BG - Български, \
 CA - Catalan, \
@@ -62,7 +63,9 @@ WebCam mic, \
 Studio mic, \
 Other
 
-uploadText = <html>By clicking the \"Upload\" button, you agree to assign the Copyright to your recorded speech to <br> the Free Software Foundation, and to license your submission under the GNU Public Licence (\"GPL\"):
+uploadText = <html>By clicking the \"Upload\" button, you agree to assign the Copyright to your recorded speech to <br> \
+the Free Software Foundation, and to license your submission under the GNU Public Licence (\"GPL\"):
+
 uploadButtonLabel = Upload To VoxForge
 
 moreInfoText = For more information on Copyright and GPL, click here:
@@ -83,5 +86,5 @@ uploadingMessageLabel = Uploading...
 savingMessageLabel = Uploading...
 uploadCompletedMessageLabel = Upload completed... Thank you for your submission!
 
-// direction of text
+# direction of text
 leftToRight = true
