--- a/src/speechrecorder/languages/MessagesBundle_it.properties
+++ b/src/speechrecorder/languages/MessagesBundle_it.properties
@@ -18,7 +18,7 @@ Adulto, \
 Anziano
     
 dialectPanelLabel = Dialetto di pronuncia:
-dialectSelection = Selezionare, \ 
+dialectSelection = Selezionare, \
 Italiano generico, \
 Italiano abruzzese, \
 Italiano calabrese, \
@@ -40,8 +40,9 @@ WebCam mic, \
 Studio mic, \
 Altro
         
-uploadText = <html>Cliccando il bottone \"Carica\", si accetta di assegnare il Copyright del parlato registrato a <br> "
-   + "la Free Software Foundation, e di rilasciare il tuo contributo nei termini della GNU Public Licence (\"GPL\"):" ;
+uploadText = <html>Cliccando il bottone \"Carica\", si accetta di assegnare il Copyright del parlato registrato a <br> \
+la Free Software Foundation, e di rilasciare il tuo contributo nei termini della GNU Public Licence (\"GPL\"):
+
 uploadButtonLabel = Carica
         
 moreInfoText = Per ulteriori informazioni sul Copyright e la GPL, premere qui:
