--- a/src/speechrecorder/languages/MessagesBundle_nl.properties
+++ b/src/speechrecorder/languages/MessagesBundle_nl.properties
@@ -2,7 +2,8 @@ usernamePanelLabel = Gebruikersnaam:
 usernamePanelText = (laat leeg voor een anonieme bijdrage)
 	    
 copyrightName = Free Software Foundation
-	    
+
+pleaseSelect = Maak een keuze
 other = anders
 notApplicable = unknown
 	    
@@ -44,6 +45,7 @@ other
 uploadText = <html>druk op de knop \"doneren\" om het auteursrecht in de opgenomen  <br> \
 spraak over te dragen aan de Free Software Foundation en de bijdrage ter beschikking <br> \
 te stellen onder de GNU Public Licence (\"GPL\") :
+
 uploadButtonLabel = doneren
 	    
 moreInfoText = klik op de knop voor meer informatie over ateursrecht en de GPL:
