--- a/src/speechrecorder/languages/MessagesBundle_ru.properties
+++ b/src/speechrecorder/languages/MessagesBundle_ru.properties
@@ -7,19 +7,16 @@ pleaseSelect = Выберите
 notApplicable = другое
 
 genderPanelLabel = Пол:
-genderSelection = Выберите, \
-Мужчина, \
+genderSelection = Мужчина, \
 Женщина
 
 ageRangePanelLabel = Возраст:
-ageSelection = Выберите, \
-до 25, \
+ageSelection = до 25, \
 до 55, \
 более 55
 
 dialectPanelLabel = Регион
-dialectSelection = Выберите, \
-Центральный, \
+dialectSelection = Центральный, \
 Южный, \
 Северный, \
 Урал, \
@@ -29,16 +26,17 @@ dialectSelection = Выберите, \
 Другое
 
 microphonePanelLabel = Тип микрофона:
-microphoneSelection = Выберите, \
-В гарнитуре, \
+microphoneSelection = В гарнитуре, \
 USB, \
 Компьютерный, \
 Встроенный в ноутбук, \
 Веб-камера, \
-Студийный микрофон, 
+Студийный микрофон, \
 Другое
 
-uploadText = <html>Нажимая на кнопку \"Загрузить\", Вы передаёте права на записанную информацию <br> Ассоциации Свободного Программного Обеспечения, и позволяете распространять её в терминах лицензии GNU GPL: 
+uploadText = <html>Нажимая на кнопку \"Загрузить\", Вы передаёте права на записанную информацию <br> \
+Ассоциации Свободного Программного Обеспечения, и позволяете распространять её в терминах лицензии GNU GPL: 
+
 uploadButtonLabel = Загрузить
 
 moreInfoText = Для получения дополнительной информации о правах на запись, прочитайте эту страницу:
