draft localization - all languages converted to properties file

--- a/src/speechrecorder/languages/MessagesBundle_de.properties
+++ b/src/speechrecorder/languages/MessagesBundle_de.properties
@@ -1,5 +1,8 @@
+languagePanelLabel = Sprachen
+
 usernamePanelLabel = Benutzername:
 usernamePanelText = (für anonymen Beitrag leer lassen)
+
 copyrightName = Free Software Foundation
 
 pleaseSelect = Bitte wählen
