--- a/src/speechrecorder/languages/MessagesBundle_es.properties
+++ b/src/speechrecorder/languages/MessagesBundle_es.properties
@@ -1,3 +1,5 @@
+languagePanelLabel = Idiomas
+
 usernamePanelLabel = Nombre de Usuario:
 usernamePanelText = (dejar en blanco para enviar anonimamente)
 
