--- a/src/speechrecorder/languages/MessagesBundle_it.properties
+++ b/src/speechrecorder/languages/MessagesBundle_it.properties
@@ -1,3 +1,5 @@
+languagePanelLabel = Lingue
+
 usernamePanelLabel = Nome utente:
 usernamePanelText = (lasciare in bianco se si vuole inviare come anonimo)
 
