--- a/src/speechrecorder/languages/MessagesBundle_iw.properties
+++ b/src/speechrecorder/languages/MessagesBundle_iw.properties
@@ -18,6 +18,7 @@
 #            return language;
 #        }
 #    }
+languagePanelLabel = שפה
 
 usernamePanelLabel = שם משתמש:
 usernamePanelText = (השאר ריק על מנת לשלוח כאנונימי)
