--- a/src/speechrecorder/languages/MessagesBundle_fr.properties
+++ b/src/speechrecorder/languages/MessagesBundle_fr.properties
@@ -1,3 +1,5 @@
+languagePanelLabel = Langues
+
 usernamePanelLabel = Nom d'utilisateur:
 usernamePanelText = (ne pas remplir pour un envoi anonyme)
       
