--- a/src/speechrecorder/languages/MessagesBundle_nl.properties
+++ b/src/speechrecorder/languages/MessagesBundle_nl.properties
@@ -1,3 +1,5 @@
+languagePanelLabel = Talen
+
 usernamePanelLabel = Gebruikersnaam:
 usernamePanelText = (laat leeg voor een anonieme bijdrage)
 	    
