change way rightToLeft languages are indicated

--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -87,4 +87,4 @@ savingMessageLabel = Uploading...
 uploadCompletedMessageLabel = Upload completed... Thank you for your submission!
 
 # direction of text
-leftToRight = true
+rightToLeft = false
