--- a/src/speechrecorder/languages/MessagesBundle_fa.properties
+++ b/src/speechrecorder/languages/MessagesBundle_fa.properties
@@ -71,4 +71,5 @@ sampleGraphPositionLabel ="  موضعیت
 uploadingMessageLabel = در حال ارسال...
 uploadCompletedMessageLabel = ارسال با موفقیت انجام شد، از مشارکت شما سپاس‌گزاریم!
 
-leftToRight = false;
+# direction of text
+rightToLeft = true
