--- a/src/speechrecorder/languages/MessagesBundle_iw.properties
+++ b/src/speechrecorder/languages/MessagesBundle_iw.properties
@@ -76,4 +76,4 @@ sampleGraphPositionLabel ="  מיקום:
 uploadCompletedMessageLabel = ההעלאה הסתיימה... תודה מקרב לב על עזרתך!
 
 # direction of text
-leftToRight = false
+rightToLeft = true
