translate ready to record mesage in given languages

--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -1,8 +1,9 @@
 languagePanelLabel = Language:
 # comma separated list; backslah and return character is line continuation 
 # for Java properties file
-# BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
-languageSelection = EN - English, \
+# BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE/IW - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
+languageSelection = \
+EN - English, \
 BG - Български, \
 CA - Catalan, \
 DE - Deutsch, \
@@ -82,6 +83,7 @@ sampleGraphFileLabel = File:
 sampleGraphLengthLabel =  Length: 
 sampleGraphPositionLabel = Position: 
 
+readyToRecord = Ready to Record
 uploadingMessageLabel = Uploading...
 savingMessageLabel = Uploading...
 uploadCompletedMessageLabel = Upload completed... Thank you for your submission!
