--- a/src/speechrecorder/languages/MessagesBundle_bg.properties
+++ b/src/speechrecorder/languages/MessagesBundle_bg.properties
@@ -1,3 +1,5 @@
+# BG - Bulgarian
+
 languagePanelLabel = Език
 
 usernamePanelLabel = потребителско  име: 
@@ -48,5 +50,6 @@ sampleGraphFileLabel = Файл:
 sampleGraphLengthLabel =   Продължителност:  
 sampleGraphPositionLabel ="  Позиция:     
 
-	      uploadingMessageLabel = Качване... 
+readyToRecord = Готови ли сте да добавите
+uploadingMessageLabel = Качване... 
 uploadCompletedMessageLabel = Качването завършено... Благодарим ви за записа! 
