--- a/src/speechrecorder/languages/MessagesBundle_ca.properties
+++ b/src/speechrecorder/languages/MessagesBundle_ca.properties
@@ -1,3 +1,5 @@
+# ca - Catalan
+
 languagePanelLabel = Idioma
 
 usernamePanelLabel = Nom d'usuari:
@@ -54,5 +56,6 @@ sampleGraphFileLabel = Fitxer:
 sampleGraphLengthLabel =   Durada: 
 sampleGraphPositionLabel ="  Posició: 
 
+readyToRecord = Està llest per gravar
 uploadingMessageLabel = S'està penjant les gravacions...
 uploadCompletedMessageLabel = Càrrega completada... Gràcies per la vostra contribució!
