--- a/src/speechrecorder/languages/MessagesBundle_de.properties
+++ b/src/speechrecorder/languages/MessagesBundle_de.properties
@@ -1,3 +1,5 @@
+#DE - German
+
 languagePanelLabel = Sprachen
 
 usernamePanelLabel = Benutzername:
@@ -54,6 +56,7 @@ peakWarningLabel =  Achtung: Eingabe könnte zu laut sein
 sampleGraphFileLabel = Datei: 
 sampleGraphLengthLabel =   Länge: 
 sampleGraphPositionLabel ="  Position: 
- 
+
+readyToRecord = Bereit für die Aufnahme
 uploadingMessageLabel = Wird hochgeladen...
 uploadCompletedMessageLabel = Alle Daten hochgeladen...  Danke für Ihren Beitrag!
