--- a/src/speechrecorder/languages/MessagesBundle_el.properties
+++ b/src/speechrecorder/languages/MessagesBundle_el.properties
@@ -1,3 +1,5 @@
+#EL - Greek
+
 languagePanelLabel = Γλώσσες
 
 usernamePanelLabel = Όνομα χρήστη:
@@ -57,5 +59,6 @@ sampleGraphFileLabel = Αρχείο:
 sampleGraphLengthLabel =   Μήκος: 
 sampleGraphPositionLabel ="  Θέση: 
 
- uploadingMessageLabel = Αποστολή...
+readyToRecord = Έτοιμος να καταγράψει
+uploadingMessageLabel = Αποστολή...
 uploadCompletedMessageLabel = Η αποστολή ολοκληρώθηκε... Ευχαριστούμε για την συμμετοχή σας!
