--- a/src/speechrecorder/languages/MessagesBundle_fa.properties
+++ b/src/speechrecorder/languages/MessagesBundle_fa.properties
@@ -1,3 +1,5 @@
+#FA - Persian
+
 languagePanelLabel = زبان
 
 usernamePanelLabel = نام کاربری
@@ -68,6 +70,7 @@ sampleGraphFileLabel = فایل
 sampleGraphLengthLabel =   طول 
 sampleGraphPositionLabel ="  موضعیت 
 
+readyToRecord = آماده برای ضبط
 uploadingMessageLabel = در حال ارسال...
 uploadCompletedMessageLabel = ارسال با موفقیت انجام شد، از مشارکت شما سپاس‌گزاریم!
 
