--- a/src/speechrecorder/languages/MessagesBundle_fr.properties
+++ b/src/speechrecorder/languages/MessagesBundle_fr.properties
@@ -1,3 +1,5 @@
+#FR - French
+
 languagePanelLabel = Langues
 
 usernamePanelLabel = Nom d'utilisateur:
@@ -11,7 +13,7 @@ notApplicable = inconnu
 languagePanelLabel = Langue:
 
 genderPanelLabel = Sexe:
-genderSelection = Masculin, \  
+genderSelection = Masculin, \
 Féminin
  
 ageRangePanelLabel = Tranche d'âge:
@@ -53,6 +55,7 @@ peakWarningLabel =  Attention: volume d'entrée micro peut-être trop fort
 sampleGraphFileLabel = Fichier: 
 sampleGraphLengthLabel =   Longueur: 
 sampleGraphPositionLabel =  Position: 
-      
+
+readyToRecord = Prêt à enregistrer 
 uploadingMessageLabel = Envoi en cours...
 uploadCompletedMessageLabel = Envoi terminé... Merci de votre participation !
