--- a/src/speechrecorder/languages/MessagesBundle_hr.properties
+++ b/src/speechrecorder/languages/MessagesBundle_hr.properties
@@ -1,3 +1,5 @@
+# HR - Croatian
+
 languagePanelLabel = Jezik
 
 usernamePanelLabel = Korisničko ime
@@ -52,5 +54,6 @@ sampleGraphFileLabel = Datoteka:
 sampleGraphLengthLabel = Dužina: 
 sampleGraphPositionLabel = Pozicija: 
 
+readyToRecord = spreman za snimanje
 uploadingMessageLabel = Slanje...
 uploadCompletedMessageLabel = Slanje završeno... Hvala vam na pomoći!
