--- a/src/speechrecorder/languages/MessagesBundle_it.properties
+++ b/src/speechrecorder/languages/MessagesBundle_it.properties
@@ -59,5 +59,6 @@ sampleGraphFileLabel = File:
 sampleGraphLengthLabel =   Lunghezza: 
 sampleGraphPositionLabel ="  Posizione: 
 
+readyToRecord = pronto a registrare
 uploadingMessageLabel = Caricamento...
 uploadCompletedMessageLabel = Caricamento completato... Si ringrazia per il contributo!
