--- a/src/speechrecorder/languages/MessagesBundle_iw.properties
+++ b/src/speechrecorder/languages/MessagesBundle_iw.properties
@@ -1,3 +1,5 @@
+#HE/IW - Hebrew 
+
 # he - Hebrew - gets converted to iw by Locale constrcutor.
 #
 #from Local class:
@@ -72,7 +74,8 @@ sampleGraphFileLabel = קובץ:
 sampleGraphLengthLabel =   אורך: 
 sampleGraphPositionLabel ="  מיקום: 
 
- uploadingMessageLabel = מעלה...
+readyToRecord = מוכן להקליט
+uploadingMessageLabel = מעלה...
 uploadCompletedMessageLabel = ההעלאה הסתיימה... תודה מקרב לב על עזרתך!
 
 # direction of text
