--- a/src/speechrecorder/languages/MessagesBundle_nl.properties
+++ b/src/speechrecorder/languages/MessagesBundle_nl.properties
@@ -1,3 +1,5 @@
+#NL - Netherlands
+
 languagePanelLabel = Talen
 
 usernamePanelLabel = Gebruikersnaam:
@@ -62,5 +64,6 @@ sampleGraphFileLabel = Bestand:
 sampleGraphLengthLabel =   Lengte: 
 sampleGraphPositionLabel ="  Positie: 
 
+readyToRecord = klaar om op te nemen
 uploadingMessageLabel = Aan het uploaden...
 uploadCompletedMessageLabel = Upload voltooid. Bedankt voor de bijdrage!
