--- a/src/speechrecorder/languages/MessagesBundle_pt.properties
+++ b/src/speechrecorder/languages/MessagesBundle_pt.properties
@@ -1,3 +1,5 @@
+#PT - Portuguese
+
 languagePanelLabel = Línguas
 
 usernamePanelLabel = Usuário:
@@ -58,5 +60,6 @@ sampleGraphFileLabel = Arquivo:
 sampleGraphLengthLabel =   Tamanho: 
 sampleGraphPositionLabel ="  Posição: 
 
+readyToRecord = pronto para gravar
 uploadingMessageLabel = Submetendo...
 uploadCompletedMessageLabel = Submissão completada... Obrigado por sua submissão!
