--- a/src/speechrecorder/languages/MessagesBundle_ru.properties
+++ b/src/speechrecorder/languages/MessagesBundle_ru.properties
@@ -53,5 +53,6 @@ sampleGraphFileLabel = Файл:
 sampleGraphLengthLabel = Длина: 
 sampleGraphPositionLabel = Положение: 
 
+readyToRecord = Готов к записи
 uploadingMessageLabel = Загрузка записи...
 uploadCompletedMessageLabel = Запись загружена...Спасибо за участие!
