--- a/src/speechrecorder/languages/MessagesBundle_sq.properties
+++ b/src/speechrecorder/languages/MessagesBundle_sq.properties
@@ -1,3 +1,5 @@
+#SQ - Albanian
+
 languagePanelLabel = Shqip
 
 usernamePanelLabel = Emri i përdoruesit:
@@ -49,5 +51,6 @@ sampleGraphFileLabel = Skedari:
 sampleGraphLengthLabel = Gjatësia:
 sampleGraphPositionLabel = Pozicioni: 
 
+readyToRecord = gati për të regjistruar
 uploadingMessageLabel = Duke u ngarkuar...
 uploadCompletedMessageLabel = Ngarkimi përfundoi...Ju faleminderit për kontributin tuaj!
