--- a/src/speechrecorder/languages/MessagesBundle_uk.properties
+++ b/src/speechrecorder/languages/MessagesBundle_uk.properties
@@ -1,3 +1,5 @@
+#UK - Ukrainian
+
 languagePanelLabel = мови
 
 usernamePanelLabel = Користувач:
@@ -50,5 +52,6 @@ sampleGraphFileLabel = Файл:
 sampleGraphLengthLabel =   Довжина: 
 sampleGraphPositionLabel ="  Позиція: 
 
+readyToRecord = готові до запису
 uploadingMessageLabel = Відправляється...
 uploadCompletedMessageLabel = Відправлено... Дякуємо за допомогу!
