--- a/src/speechrecorder/languages/MessagesBundle_es.properties
+++ b/src/speechrecorder/languages/MessagesBundle_es.properties
@@ -1,3 +1,5 @@
+#ES - Spanish
+
 languagePanelLabel = Idiomas
 
 usernamePanelLabel = Nombre de Usuario:
@@ -59,5 +61,6 @@ sampleGraphFileLabel = Archivo:
 sampleGraphLengthLabel =   Largo: 
 sampleGraphPositionLabel ="  Posición: 
 
+readyToRecord = Está listo para grabar
 uploadingMessageLabel = Subiendo...
 uploadCompletedMessageLabel = Entrega completada... Gracias por su entrega!
