fixed duplicate audio files being created when changing languages using language selector

--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -3,23 +3,23 @@ languagePanelLabel = Language:
 # for Java properties file
 # BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE/IW - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
 languageSelection = \
-EN - English, \
-BG - Български, \
-CA - Catalan, \
-DE - Deutsch, \
-EL - Ελληνικά,  \
-ES - Español, \
-FA - فارسی, \
-FR - Français, \
-HE - עברית , \
-HR - Hrvatski, \
-IT - Italiano, \
-NL - Nederlands,  \
-PT - Português, \
-RU - Русский, \
-SQ - Shqip, \
-TR - Türkçe, \
-UK - Українська
+en - English, \
+bg - Български, \
+ca - Catalan, \
+de - Deutsch, \
+el - Ελληνικά,  \
+es - Español, \
+fa - فارسی, \
+fr - Français, \
+he - עברית , \
+hr - Hrvatski, \
+it - Italiano, \
+nl - Nederlands,  \
+pt - Português, \
+ru - Русский, \
+sq - Shqip, \
+tr - Türkçe, \
+uk - Українська
 
 usernamePanelLabel = Username
 usernamePanelText = (leave blank to submit anonymously)
