snapshot - draft creating Submission class to hold submission prompts and wavfile

--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -85,7 +85,7 @@ sampleGraphPositionLabel = Position:
 
 readyToRecord = Ready to Record
 uploadingMessageLabel = Uploading...
-savingMessageLabel = Uploading...
+savingMessageLabel = Saving...
 uploadCompletedMessageLabel = Upload completed... Thank you for your submission!
 
 # direction of text
