fix turkish message

--- a/src/speechrecorder/languages/MessagesBundle_tr.properties
+++ b/src/speechrecorder/languages/MessagesBundle_tr.properties
@@ -51,5 +51,6 @@ sampleGraphFileLabel = Dosya:
 sampleGraphLengthLabel =   Uzunluk: 
 sampleGraphPositionLabel ="  Pozisyon: 
 
+readyToRecord = kaydetmek için hazır
 uploadingMessageLabel = Gönderiliyor...
 uploadCompletedMessageLabel = Yükleme tamamlandı... Gönderdiğiniz için teşekkür ederiz.
