minor language property fixes

--- a/src/speechrecorder/languages/MessagesBundle_ca.properties
+++ b/src/speechrecorder/languages/MessagesBundle_ca.properties
@@ -3,16 +3,16 @@
 languagePanelLabel = Idioma
 
 usernamePanelLabel = Nom d'usuari:
-usernamePanelText = (deixeu-lo buit per remandre anÚnim)
+usernamePanelText = (deixeu-lo buit per remandre an√≤nim)
 
 copyrightName = Free Software Foundation
 	    
 pleaseSelect = Trieu-ne un
 notApplicable = desconegut
 
-genderPanelLabel = GËnere:
-genderSelection = MasculÌ, \
-FemenÌ 
+genderPanelLabel = G√®nere:
+genderSelection = Mascul√≠, \
+Femen√≠ 
    
 ageRangePanelLabel = Edat:
 ageSelection = Jove, \
@@ -22,28 +22,28 @@ Tercera edat
 dialectPanelLabel = Dialecte:
 dialectSelection = Central, \
 Nord-occidental, \
-Valenci‡, \
-Bale‡ric, \
-Septentrional (rosellonËs), \
+Valenci√†, \
+Bale√†ric, \
+Septentrional (rosellon√®s), \
 Altre
 	    
-microphonePanelLabel = Tipus de micrÚfon:
-microphoneSelection = MicrÚfon d'auriculars, \
-MicrÚfon d'auriculars USB, \
-MicrÚfon d'escriptori, \
-MicrÚfon d'escriptori USB, \
-MicrÚfon incorporat al port‡til, \ 
-MicrÚfon de c‡mera web, \
-MicrÚfon d'estudi, \
+microphonePanelLabel = Tipus de micr√≤fon:
+microphoneSelection = Micr√≤fon d'auriculars, \
+Micr√≤fon d'auriculars USB, \
+Micr√≤fon d'escriptori, \
+Micr√≤fon d'escriptori USB, \
+Micr√≤fon incorporat al port√†til, \ 
+Micr√≤fon de c√†mera web, \
+Micr√≤fon d'estudi, \
 Altre 
 	    
-uploadText = <html>Fent clic al botÛ \"Penja\", consentiu a assignar els drets d'autor de les vostres gravacions a <br> \
-la Free Software Foundation i cediu la vostra tramesa sota la LlicËncia P˙blica General de GNU (\"GPL\"):
+uploadText = <html>Fent clic al bot√≥ \"Penja\", consentiu a assignar els drets d'autor de les vostres gravacions a <br> \
+la Free Software Foundation i cediu la vostra tramesa sota la Llic√®ncia P√∫blica General de GNU (\"GPL\"):
 
 uploadButtonLabel = Penja
 	    
-moreInfoText = Per a mÈs informaciÛ en quant a drets d'autor i la GPL, feu clic aquÌ:
-moreInfoButtonLabel = MÈs informaciÛ
+moreInfoText = Per a m√©s informaci√≥ en quant a drets d'autor i la GPL, feu clic aqu√≠:
+moreInfoButtonLabel = M√©s informaci√≥
 
 aboutButtonLabel = Quant a
 	    
@@ -51,11 +51,11 @@ recordButton = Enregistra
 stopButton = Atura 
 playButton = Reprodueix 
 
-peakWarningLabel =  "AvÌs: pot ser que el volum sigui massa elevat 
+peakWarningLabel =  "Av√≠s: pot ser que el volum sigui massa elevat 
 sampleGraphFileLabel = Fitxer: 
 sampleGraphLengthLabel =   Durada: 
-sampleGraphPositionLabel ="  PosiciÛ: 
+sampleGraphPositionLabel ="  Posici√≥: 
 
-readyToRecord = Est‡ llest per gravar
-uploadingMessageLabel = S'est‡ penjant les gravacions...
-uploadCompletedMessageLabel = C‡rrega completada... Gr‡cies per la vostra contribuciÛ!
+readyToRecord = Est√† llest per gravar
+uploadingMessageLabel = S'est√† penjant les gravacions...
+uploadCompletedMessageLabel = C√†rrega completada... Gr√†cies per la vostra contribuci√≥!
