--- a/src/speechrecorder/languages/MessagesBundle_pt.properties
+++ b/src/speechrecorder/languages/MessagesBundle_pt.properties
@@ -31,8 +31,9 @@ Portugês de Mozambique, \
 Portugês de Portugal, \
 Portugês de São Tomé e Príncipe, \
 Outro
-	    
-microphonePanelLabel = Fone de Ouvido com Microfone, \
+
+microphonePanelLabel = Tipo de Microfone:
+microphoneSelection = Fone de Ouvido com Microfone, \
 Fone de Ouvido USB com Microfone, \
 Microfone de Mesa, \
 Microfone de Mesa USB, \
