draft language selection working

--- a/src/speechrecorder/languages/MessagesBundle_fr.properties
+++ b/src/speechrecorder/languages/MessagesBundle_fr.properties
@@ -46,7 +46,9 @@ uploadButtonLabel = Envoyer
      
 moreInfoText = Pour de plus amples renseignements sur le droit d'auteur et la licence GPL, cliquez ici:
 moreInfoButtonLabel = Plus d'informations  
-     
+
+aboutButtonLabel = A propos de
+
 recordButton = Enregistrer
 stopButton = Arrêter
 playButton = Lecture
