updates to uploadButtonlabel for some languages

--- a/src/speechrecorder/languages/MessagesBundle_bg.properties
+++ b/src/speechrecorder/languages/MessagesBundle_bg.properties
@@ -41,6 +41,8 @@ uploadButtonLabel = Качи
 moreInfoText = За повече информация за авторски права и GPL, натиснете тук: 
 moreInfoButtonLabel = За повече информация     
 
+aboutButtonLabel = О программе
+
 recordButton = Запис  
 stopButton = Стоп  
 playButton = Прослушване  
