fix Please Select in English

--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -30,19 +30,16 @@ pleaseSelect = Please Select
 notApplicable = unknown
 
 genderPanelLabel = Gender:
-genderSelection = Please Select, \
-Male, \
+genderSelection = Male, \
 Female
 
 ageRangePanelLabel = Age Range:
-ageSelection = Please Select, \
-Youth, \
+ageSelection = Youth, \
 Adult, \
 Senior
 
 dialectPanelLabel = Pronunciation Dialect:
-dialectSelection = Please Select, \
-Australian English, \
+dialectSelection = Australian English, \
 American English, \
 British English, \
 Canadian English, \
@@ -54,8 +51,7 @@ South African English, \
 Other
 
 microphonePanelLabel = Microphone Type:
-microphoneSelection = Please Select, \
-Headset mic, \
+microphoneSelection = Headset mic, \
 USB Headset mic, \
 Desktop Boom mic, \
 USB Desktop Boom mic, \
