add chinese language translations and prompts

--- a/src/speechrecorder/languages/MessagesBundle.properties
+++ b/src/speechrecorder/languages/MessagesBundle.properties
@@ -1,7 +1,10 @@
 languagePanelLabel = Language:
-# comma separated list; backslah and return character is line continuation 
+# comma separated list; backslash and return character is line continuation 
 # for Java properties file
-# BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, FA - Persian, FR - French, HE/IW - Hebrew , HR - Croatian, IT - Italian, NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, UK - Ukrainian 
+# BG - Bulgarian, CA - Catalan, DE - German, EL - Greek, EN - English, ES - Spanish, 
+# FA - Persian, FR - French, HE/IW - Hebrew , HR - Croatian, IT - Italian, 
+# NL - Netherlands,  PT - Portuguese, RU - Russian, SQ - Albanian, TR - Turkish, 
+# UK - Ukrainian, ZH - Chinese 
 languageSelection = \
 en - English, \
 bg - Български, \
@@ -19,7 +22,8 @@ pt - Português, \
 ru - Русский, \
 sq - Shqip, \
 tr - Türkçe, \
-uk - Українська
+uk - Українська, \
+zh - 中文
 
 usernamePanelLabel = Username
 usernamePanelText = (leave blank to submit anonymously)
